pygobject (3.28.3-1) UNRELEASED; urgency=medium

  * New upstream release
  * Set Rules-Requires-Root to no
  * Don't install detailed upstream ChangeLog, only NEWS
  * Standards-Version: 4.2.0
  * d/copyright: Remove trailing whitespace

 -- Simon McVittie <smcv@debian.org>  Tue, 14 Aug 2018 10:14:00 +0100

pygobject (3.28.2-1) unstable; urgency=medium

  * New upstream release
  * Bump Standards-Version to 4.1.4

 -- Jeremy Bicha <jbicha@debian.org>  Fri, 13 Apr 2018 16:55:29 -0400

pygobject (3.28.1-1) unstable; urgency=medium

  * New upstream release
  * Build-Depend on pytest
  * Update Vcs fields for migration to https://salsa.debian.org/
  * Bump debhelper compat to 11
  * debian/docs: AUTHORS and README are no longer provided

 -- Jeremy Bicha <jbicha@debian.org>  Sun, 25 Mar 2018 18:59:29 -0400

pygobject (3.26.1-2) unstable; urgency=medium

  * Update Vcs fields for conversion to git
  * Add debian/gbp.conf
  * Bump Standards-Version to 4.1.2

 -- Jeremy Bicha <jbicha@debian.org>  Fri, 15 Dec 2017 20:50:28 -0500

pygobject (3.26.1-1) unstable; urgency=medium

  * New upstream release (Closes: #879638)
    - Bump pycairo requirement to 1.11.1
    - Switch build-dep from gnome-common to autoconf-archive (Closes: #829934)
    - Drop all patches, they have been merged upstream
  * debian/control.in:
    - Drop python-gobject-dev and python-gobject-dbg transitional packages,
      nothing depends against it anymore (Closes: #878781)
  * debian/rules: Run the test with locale C.UTF-8
  * debian/*.lintian-overrides: Drop unused lintian overrides
  * debian/rules: Do not call dh_makeshlibs during build, for some reasons the
    python bindings are build with a SONAME set and this causes dh_makeshlibs
    to create a shlibs file and to trigger ldconfig.

 -- Laurent Bigonville <bigon@debian.org>  Sun, 19 Nov 2017 23:40:08 +0100

pygobject (3.24.1-6) unstable; urgency=medium

  * Build-Depend on gir1.2-gtk-3.0 for build tests
  * Bump debhelper compat to 10