@@ -3,38 +3,38 @@ Section: python
 Priority: optional
 Maintainer: Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>
 Uploaders: @GNOME_TEAM@
-Build-Depends: debhelper (>= 11),
+Build-Depends: at-spi2-core,
+               autoconf-archive,
+               dbus (>= 1.8),
+               debhelper (>= 11),
                dh-python,
+               docbook-xsl,
                dpkg-dev (>= 1.16.1~),
                gir1.2-gtk-3.0 <!nocheck>,
-               autoconf-archive,
                gnome-pkg-tools (>= 0.10),
-               python-all-dev (>= 2.6.6-3~),
-               python3-all-dev,
-               python-pytest <!nocheck>,
-               python3-pytest <!nocheck>,
-               python-setuptools,
-               python3-setuptools,
-               libglib2.0-dev (>= 2.38.0),
+               gobject-introspection (>= 1.46.0),
                libcairo2-dev,
                libffi-dev (>= 3.0.5),
-               gobject-introspection (>= 1.46.0),
                libgirepository1.0-dev (>= 1.39.0),
-               python-cairo-dev (>= 1.11.1),
-               python3-cairo-dev (>= 1.11.1),
-               xsltproc,
-               xvfb <!nocheck>,
-               xauth <!nocheck>,
-               dbus (>= 1.8),
-               at-spi2-core,
+               libglib2.0-dev (>= 2.38.0),
                locales,
-               docbook-xsl,
                pep8,
                pyflakes,
                python-all-dbg,
-               python3-all-dbg,
+               python-all-dev (>= 2.6.6-3~),
                python-apt-dbg,
                python-cairo-dbg,
+               python-cairo-dev (>= 1.11.1),
+               python-pytest <!nocheck>,
+               python-setuptools,
+               python3-all-dbg,
+               python3-all-dev,
+               python3-cairo-dev (>= 1.11.1),
+               python3-pytest <!nocheck>,
+               python3-setuptools,
+               xauth <!nocheck>,
+               xsltproc,
+               xvfb <!nocheck>
 Rules-Requires-Root: no
 X-Python-Version: >= 2.7
 X-Python3-Version: >= 3.4
@@ -45,10 +45,10 @@ Homepage: https://wiki.gnome.org/Projects/PyGObject
 
 Package: python-gi
 Architecture: any
-Depends: ${python:Depends},
-         ${shlibs:Depends},
+Depends: gir1.2-glib-2.0 (>= 1.39.0),
          ${misc:Depends},
-         gir1.2-glib-2.0 (>= 1.39.0)
+         ${python:Depends},
+         ${shlibs:Depends}
 Provides: ${python:Provides}
 Suggests: python-gi-cairo
 Breaks: python-aptdaemon (<< 1.0),
@@ -64,10 +64,10 @@ Description: Python 2.x bindings for gobject-introspection libraries
 
 Package: python3-gi
 Architecture: any
-Depends: ${python3:Depends},
-         ${shlibs:Depends},
+Depends: gir1.2-glib-2.0 (>= 1.39.0),
          ${misc:Depends},
-         gir1.2-glib-2.0 (>= 1.39.0)
+         ${python3:Depends},
+         ${shlibs:Depends}
 Description: Python 3 bindings for gobject-introspection libraries
  GObject is an abstraction layer that allows programming with an object
  paradigm that is compatible with many languages. It is a part of Glib,
@@ -79,11 +79,11 @@ Description: Python 3 bindings for gobject-introspection libraries
 
 Package: python-gi-cairo
 Architecture: any
-Depends: ${python:Depends},
-         ${shlibs:Depends},
-         ${misc:Depends},
+Depends: python-cairo (>= 1.11.1),
          python-gi (= ${binary:Version}),
-         python-cairo (>= 1.11.1)
+         ${misc:Depends},
+         ${python:Depends},
+         ${shlibs:Depends}
 Description: Python Cairo bindings for the GObject library
  GObject is an abstraction layer that allows programming with an object
  paradigm that is compatible with many languages. It is a part of Glib,
@@ -95,10 +95,10 @@ Description: Python Cairo bindings for the GObject library
 Package: python-gi-dbg
 Section: debug
 Architecture: any
-Depends: ${python:Depends},
-         ${shlibs:Depends},
+Depends: python-gi (= ${binary:Version}),
          ${misc:Depends},
-         python-gi (= ${binary:Version})
+         ${python:Depends},
+         ${shlibs:Depends}
 Description: Python bindings for the GObject library (debug extension)
  GObject is an abstraction layer that allows programming with an object
  paradigm that is compatible with many languages. It is a part of Glib,
@@ -112,10 +112,10 @@ Description: Python bindings for the GObject library (debug extension)
 Package: python3-gi-dbg
 Section: debug
 Architecture: any
-Depends: ${python3:Depends},
-         ${shlibs:Depends},
+Depends: python3-gi (= ${binary:Version}),
          ${misc:Depends},
-         python3-gi (= ${binary:Version})
+         ${python3:Depends},
+         ${shlibs:Depends}
 Description: Python 3 bindings for gobject-introspection libraries (debug extension)
  GObject is an abstraction layer that allows programming with an object
  paradigm that is compatible with many languages. It is a part of Glib,
@@ -129,12 +129,12 @@ Description: Python 3 bindings for gobject-introspection libraries (debug extens
 
 Package: python-gi-dev
 Architecture: any
-Depends: ${shlibs:Depends},
-         ${misc:Depends},
+Depends: libffi-dev (>= 3.0.5),
+         libglib2.0-dev (>= 2.35.9),
          python-gi (= ${binary:Version}),
          python3-gi (= ${binary:Version}),
-         libglib2.0-dev (>= 2.35.9),
-         libffi-dev (>= 3.0.5)
+         ${misc:Depends},
+         ${shlibs:Depends}
 Description: development headers for GObject Python bindings
  GObject is an abstraction layer that allows programming with an object
  paradigm that is compatible with many languages. It is a part of Glib,
@@ -145,11 +145,11 @@ Description: development headers for GObject Python bindings
 
 Package: python3-gi-cairo
 Architecture: any
-Depends: ${python3:Depends},
-         ${shlibs:Depends},
-         ${misc:Depends},
+Depends: python3-cairo (>= 1.11.1),
          python3-gi (= ${binary:Version}),
-         python3-cairo (>= 1.11.1)
+         ${misc:Depends},
+         ${python3:Depends},
+         ${shlibs:Depends}
 Description: Python 3 Cairo bindings for the GObject library
  GObject is an abstraction layer that allows programming with an object
  paradigm that is compatible with many languages. It is a part of Glib,
@@ -161,9 +161,9 @@ Description: Python 3 Cairo bindings for the GObject library
 Package: python-gobject
 Section: oldlibs
 Architecture: all
-Depends: ${misc:Depends},
-         python-gi (>= ${source:Version}),
-         python-gobject-2
+Depends: python-gi (>= ${source:Version}),
+         python-gobject-2,
+         ${misc:Depends}
 Description: Python 2.x bindings for GObject - transitional package
  This package will bring the two versions of GObject Python modules: the
  deprecated gobject module, and the new gobject-introspection system. It
